# B-wbsft

./: CMakeLists.txt  README.md  Simulator.cpp  dependency_graph.dot
include/: Block.h  Node.h  Transaction.h
src/: Node.cpp  Simulator.cpp  main.cpp
